liquibase and html changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/registration
-spring.datasource.username=postgresdmin
+spring.datasource.username=postgres
 spring.datasource.password=Prat!k9828
+liquibase.change-log=classpath:/db-scripts/@currentRelease@/db.changelog-master.xml
+
+liquibase.enabled=true
+liquibase.url=jdbc:postgresql://localhost:5432/registration
+liquibase.user=postgres
+liquibase.password=Prat!k9828
