--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
 	<name>registration Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
+	<properties>
+		<currentRelease>release_01</currentRelease>
+	</properties>
+
+	<build>
+		<finalName>registration</finalName>
+	</build>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -15,7 +23,7 @@
 	</parent>
 
 	<dependencies>
-	
+
 		<!-- Spring boot started dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -30,24 +38,25 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.3-1102-jdbc41</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
-		
+
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
 
-	<build>
-		<finalName>registration</finalName>
-	</build>
+		<!-- liquibase -->
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-maven-plugin</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+	</dependencies>
 
 </project>
